Fixed gap between buttons to be closer for tighter unit
Fixed gap between buttons to be closer for tighter unit

--- a/styles/_buttons.scss
+++ b/styles/_buttons.scss
@@ -31,7 +31,7 @@
 }
 
 .btn-escape{
-    margin-right: 15px;
+    margin-right: 10px;
 }
 
 .btn-container{
