--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,7 @@
 }
 
 .btn-escape {
-  margin-right: 15px;
+  margin-right: 10px;
 }
 
 .btn-container {
